<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout_height="wrap_content"
        app:title="@string/range_of_motion"
        app:summary="@string/in_percent">

        <SeekBarPreference
            android:max="100"
            app:defaultValue="100"
            app:key="L7"
            app:min="0"
            app:showSeekBarValue="true"
            app:title="@string/layer_7"
            app:summary="@string/foreground"
            />
        <SeekBarPreference
            android:max="100"
            app:defaultValue="85"
            app:key="L6"
            app:min="0"
            app:showSeekBarValue="true"
            app:title="@string/layer_6"
            />
        <SeekBarPreference
            android:max="100"
            app:defaultValue="70"
            app:key="L5"
            app:min="0"
            app:showSeekBarValue="true"
            app:title="@string/layer_5"
            />
        <SeekBarPreference
            android:max="100"
            app:defaultValue="55"
            app:key="L4"
            app:min="0"
            app:showSeekBarValue="true"
            app:title="@string/layer_4"
            />
        <SeekBarPreference
            android:max="100"
            app:defaultValue="40"
            app:key="L3"
            app:min="0"
            app:showSeekBarValue="true"
            app:title="@string/layer_3"
            />
        <SeekBarPreference
            android:max="100"
            app:defaultValue="25"
            app:key="L2"
            app:min="0"
            app:showSeekBarValue="true"
            app:title="@string/layer_2"
            />
        <SeekBarPreference
            android:max="100"
            app:defaultValue="10"
            app:key="L1"
            app:min="0"
            app:showSeekBarValue="true"
            app:title="@string/layer_1"
            app:summary="@string/background"
            />
        <SeekBarPreference
            android:max="100"
            app:defaultValue="85"
            app:key="ScaleFactor"
            app:min="0"
            app:showSeekBarValue="true"
            app:title="@string/crop_scaling"
            app:summary="@string/landscape"
            />
        <Preference
            app:title="@string/set_default"
            app:key="set_default"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_height="wrap_content"
        app:title="@string/performance">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="use_antialiasing"
            app:title="@string/use_antialiasing" />

    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/legal">
        <Preference
            app:title="@string/license"
            app:key="license"/>
    </PreferenceCategory>
</PreferenceScreen>